@@ -1667,6 +1667,10 @@
 #undef HAVE_WORKING_VFORK
 #endif
 
+/* Define if isl is in use. */
+#ifndef USED_FOR_TARGET
+#undef HAVE_isl
+#endif
 
 /* Define to 1 if the system has the type `__int64'. */
 #ifndef USED_FOR_TARGET
@@ -1678,7 +1682,6 @@
 #ifndef USED_FOR_TARGET
 #undef HAVE_cloog
 #endif
-
 
 /* Define if F_SETLKW supported by fcntl. */
 #ifndef USED_FOR_TARGET
