@@ -374,6 +374,30 @@ getScheduleForBandList (isl_band_list *BandList)
 	  isl_band_list_free (Children);
 	}
 
+	else if (EnablePollyVector)
+	{
+	  for (i = ScheduleDimensions - 1 ;  i >= 0 ; i--)
+	    {
+#ifdef HAVE_ISL_SCHED_CONSTRAINTS_COMPUTE_SCHEDULE
+	      if (isl_band_member_is_coincident (Band, i))
+#else
+	      if (isl_band_member_is_zero_distance (Band, i))
+#endif
+		{
+		  isl_map *TileMap;
+		  isl_union_map *TileUMap;
+
+		  TileMap = getPrevectorMap (ctx, i, ScheduleDimensions, 4);
+		  TileUMap = isl_union_map_from_map (TileMap);
+		  TileUMap = isl_union_map_align_params
+		    (TileUMap, isl_space_copy (Space));
+		  PartialSchedule = isl_union_map_apply_range
+		    (PartialSchedule, TileUMap);
+		  break;
+		}
+	    }
+	}
+
       Schedule = isl_union_map_union (Schedule, PartialSchedule);
 
       isl_band_free (Band);
