@@ -2,6 +2,11 @@
 
 	* GCC 4.9.2 released.
 
+2014-08-18 Roman Gareev  <gareevroman@gmail.com>
+
+	* cloog.m4: Remove the path to isllibs from clooglibs.
+	* isl.m4: Add paths to islinc, isllibs.
+
 2014-07-26  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/47230
